name:                kh6e-servant
version:             0.1.0.0
synopsis:            KH6E.org Website
description:         Please see README
homepage:            https://github.com/dysinger/kh6e
license:             BSD3
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
copyright:           2016 Tim Dysinger
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dysinger/kh6e

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable kh6e-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kh6e-servant
  default-language:    Haskell2010

test-suite kh6e-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kh6e
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
